welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: not found: value isASleep
  if (isASleep) {return false}
      ^answerCell:4: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (isMorning) {return false}
       ^