welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
  if (isASleep) {return false}
  else if (isMom) {return true}
  else if (isMorning) {return false}
}